[package]
name = "vdviews"
version = "0.1.0"
authors = ["ruoshui <rmao10@stuy.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { version = "0.14.0", features = ["blocking"] }
tokio = "0.2.22"
futures = "0.3"